# cardiac_benchmark_toolkit

./: .gitignore  README.md  pyproject.toml  setup.cfg
cardiac_benchmark_toolkit/: __init__.py  data.py  ellipsoid_fiber_generation.py  mesh_generation.py
data/: base_and_septum_epicardium.stl  heart_muscle.geo  left_endocardium.stl  left_epicardium.stl  left_right_lumen.geo  left_ventricle.stl  left_ventricle_lit.stl  right_endocardium.stl  right_epicardium.stl  right_ventricle.stl  right_ventricle_lit.stl
data/biv_mesh_and_fibers_coarse_p1/: fibers_biv.vtk
data/biv_mesh_and_fibers_coarse_p2/: bi_ventricular.h5  bi_ventricular.xdmf  fiber_directions.h5
data/biv_mesh_and_fibers_fine_p2/: bi_ventricular.xdmf  fiber_directions.xdmf
data/monoventricle_mesh/: ellipsoid_0.005.xdmf
docker/: Dockerfile
meshes/: ellipsoid_0.005.h5
results/: figures.py
results/data/: biventricular_coarse_group_4c.pkl  biventricular_coarse_group_ambit.pkl  biventricular_coarse_group_cheart.pkl  biventricular_coarse_group_cheart_p1.pkl  biventricular_coarse_group_chimera.pkl  biventricular_coarse_group_chimera_p1.pkl  biventricular_coarse_group_comsol.pkl  biventricular_coarse_group_comsol_p1.pkl  biventricular_coarse_group_lifex.pkl  biventricular_coarse_group_lifex_p1.pkl  biventricular_coarse_group_simula.pkl  biventricular_coarse_group_simula_p1.pkl  biventricular_coarse_group_simvascular.pkl  biventricular_fine_group_4c.pkl  biventricular_fine_group_ambit.pkl  biventricular_fine_group_carpentry.pkl  biventricular_fine_group_cheart.pkl  biventricular_fine_group_cheart_p1.pkl  biventricular_fine_group_chimera.pkl  biventricular_fine_group_chimera_p1.pkl  biventricular_fine_group_comsol.pkl  biventricular_fine_group_comsol_p1.pkl  biventricular_fine_group_lifex.pkl  biventricular_fine_group_lifex_p1.pkl  biventricular_fine_group_simula.pkl  biventricular_fine_group_simula_p1.pkl  biventricular_fine_group_simvascular.pkl  monoventricular_blinded_A_group_4c.pkl  monoventricular_blinded_A_group_ambit.pkl  (+63 more)
src/: data.py  ellipsoid_fiber_generation.py  mesh_generation.py
(+16 files in other folders)
