[build-system] # Require setuptool version due to https://github.com/pypa/setuptools/issues/2938
requires = ["setuptools>=61.0.0", "wheel"]

[project]
name = "cardiac_benchmark_toolkit"
version = "0.1.0"
description = "Cardiac benchmark Toolkit"
authors = [
    {name = "Reidmen Arostica", email = "r.rethmawn@gmail.com"},
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "numpy",
    "scipy",
    "h5py",
    "meshio",
    "importlib-metadata; python_version < '3.8'"
]

[project.optional-dependencies]
dev = [
    "pdbpp",
    "ipython",
    "bump2version",
    "pre-commit",
]

all = [
   "cardiac_benchmark_toolkit[dev]"
]

[tool.setuptools]
packages = ["cardiac_benchmark_toolkit"]
