[metadata]
name = cardiac_benchmark_toolkit
version = 0.0.1
description = A python library for recreating tools for cardiac benchmark 
long_description = file: README.md
long_description_content_type = text/markdown
author = Reidmen Arostica 
author_email = r.rethmawn@gmail.com 
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
keywords = benchmark, mesh, gmsh, geometries 

[options]
packages = find:
install_requires =
    meshio
    numpy
    rich-click
    vtk
    h5py
    scipy
    importlib-metadata
python_requires = >=3.8
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    cardiac-benchmark-toolkit = cardiac_benchmark_toolkit.cli:app

[options.extras_require]
dev =
    bump2version
    ipython
    pdbpp
    pre-commit
gmsh =
    gmsh
pypi =
    build
test =
    pytest

[bdist_wheel]
universal = 1

[flake8]
exclude = docs
ignore = E203, E266, E402, E501, W503, E731
max-line-length = 79 
max-complexity = 18
select = B,C,E,F,W,T4

[mypy]
files = cardiac_benchmark_toolkit,tests
ignore_missing_imports = true
